fix(cli): Path.of→Paths.get 修复JDK8编译失败(CI)